# symbiont

./: .gitignore  README.md  docker-compose.yml
backend/: env.example  pyproject.toml
backend/symbiont/: main.py
backend/symbiont/mongodb/: __init__.py
backend/symbiont/supertokens/: __init__.py
backend/symbiont/vector_dbs/: __init__.py  chat_context_service.py  embeddings_service.py  models.py  reranker_service.py
backend/symbiont/vector_dbs/vector_store_repos/: qdrant_repo.py
frontend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  next.config.js  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/context/: AuthContext.tsx  StudyContext.tsx
frontend/src/app/sign-in/: page.tsx
frontend/src/app/studies/[studyId]/: page.tsx
frontend/src/components/: AuthForm.tsx  Loader.tsx
frontend/src/components/Auth/: AuthForm.tsx
frontend/src/components/ChatComponent/: ChatComponentMain.tsx  MessageCodeBlock.tsx
frontend/src/components/Dashboard/: UserDashboardMain.tsx
frontend/src/components/LandingPage/: Hero.tsx  LandingPageMain.tsx  Navbar.tsx
frontend/src/components/LeftSideBar/: LeftSideBarMain.tsx
frontend/src/components/Settings/: LLMSettings.tsx
frontend/src/components/Study/: PdfViewer.tsx  Resources.tsx  VideoViewer.tsx
frontend/src/components/ui/: FileUpload.tsx
frontend/src/hooks/: useAddResourceRequest.tsx  useAuthRedirect.tsx  useUserToken.tsx
frontend/src/lib/: utils.ts
frontend/src/types/: index.ts
