[project]
authors = [
    {name = "lonehegelian", email = "thelonehegelian@protonmail.com"},
]
requires-python = "<3.12,>=3.9.0"
dependencies = [
    "fastapi[all]<1.0.0,>=0.109.2",
    "psycopg2-binary<3.0.0,>=2.9.9",
    "python-dotenv<2.0.0,>=1.0.1",
    "firebase-admin<7.0.0,>=6.4.0",
    "langchain<1.0.0,>=0.1.7",
    "langchain-openai<1.0.0,>=0.0.6",
    "pinecone-client<4.0.0,>=3.0.3",
    "pypdf<5.0.0,>=4.0.2",
    "nltk<4.0.0,>=3.8.1",
    "langchain-pinecone<1.0.0,>=0.0.2",
    "youtube-transcript-api<1.0.0,>=0.6.2",
    "pytube<16.0.0,>=15.0.0",
    "beautifulsoup4<5.0.0,>=4.12.3",
    "html2text<2025.0.0,>=2024.2.26",
    "unstructured<1.0.0,>=0.12.5",
    "playwright<2.0.0,>=1.41.2",
    "langchain-text-splitters<1.0.0,>=0.0.1",
    "cohere<5.0,>=4.53",
    "langchain-anthropic<1.0.0,>=0.1.4",
    "colorlog<7.0.0,>=6.8.2",
    "langchain-google-genai<1.0.0,>=0.0.11",
    "pillow<11.0.0,>=10.2.0",
    "langchain-voyageai<1.0.0,>=0.1.0",
    "anyio<5.0.0,>=4.3.0",
    "pytest-twisted<2.0.0,>=1.14.1",
    "twisted<25.0.0,>=24.3.0",
    "pymongo<5.0.0,>=4.6.3",
    "pymupdf<2.0.0,>=1.24.2",
    "pytest-mock<4.0.0,>=3.14.0",
    "langchain-weaviate<1.0.0,>=0.0.2",
    "torch<3.0.0,>=2.4.0",
    "pymilvus<3.0.0,>=2.4.5",
    "pytest-watch<5.0.0,>=4.2.0",
    "supertokens-python<1.0.0,>=0.24.2",
    "qdrant-client<2.0.0,>=1.11.1",
    "sentence-transformers<4.0.0,>=3.1.0",
]
name = "symbiont"
version = "0.1.0"
description = ""
readme = "README.md"

[project.scripts]
delete_namespace = "scripts.delete_pinecone_vecs:main"
extract_todos = "scripts.extract_todos:main"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.2",
    "pre-commit<4.0.0,>=3.8.0",
    "pytest-asyncio<1.0.0,>=0.23.6",
    "pytest-tornasync<1.0.0.0,>=0.6.0.post2",
    "pytest-trio<1.0.0,>=0.8.0",
    "mongomock<5.0.0,>=4.1.2",
]
